= fixed padding on mobile and bs 4.1

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,4 @@
 .nice {
-    padding: 4rem;
     border-radius: 3px;
     box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
     background-color: #FFFFFF
